--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -578,7 +578,21 @@
                     });
                 });
                 let damageMarkers = (damageJson||[]).map(d => `<circle cx="${view.p(new THREE.Vector3(d.coordinates.x,d.coordinates.y,d.coordinates.z)).x}" cy="${view.p(new THREE.Vector3(d.coordinates.x,d.coordinates.y,d.coordinates.z)).y}" r="${2/scale}" class="damage-marker" />`).join('');
-                svgElements += `<g transform="translate(${view.x},${view.y})"><text x="${viewWidth/2}" y="${viewHeight+20}" text-anchor="middle" font-size="14" font-family="sans-serif">${name}</text><g transform="${contentTransform}"><g class="hidden-lines">${hiddenLinesHTML}</g><g class="visible-lines">${visibleLinesHTML}</g>${damageMarkers}</g></g>`;
+                                let rulerMarks = '';
+                if (['TOP', 'FRONT', 'BOTTOM'].includes(name)) {
+                    const relevantDimension = (name === 'FRONT') ? globalSize.y : globalSize.z;
+                    const numMarks = Math.floor(relevantDimension / 0.1);
+                    if (numMarks > 0) {
+                        const yStep = (0.1 / relevantDimension) * viewHeight;
+                        const rulerX = viewWidth + 20;
+                        const tickLength = 15;
+                        for (let i = 1; i <= numMarks; i++) {
+                            const yPos = viewHeight - (i * yStep);
+                            rulerMarks += `<line x1="${rulerX}" y1="${yPos}" x2="${rulerX + tickLength}" y2="${yPos}" stroke="black" stroke-width="0.5" />`;
+                        }
+                    }
+                }
+                svgElements += `<g transform="translate(${view.x},${view.y})"><text x="${viewWidth/2}" y="${viewHeight+20}" text-anchor="middle" font-size="14" font-family="sans-serif">${name}</text><g transform="${contentTransform}"><g class="hidden-lines">${hiddenLinesHTML}</g><g class="visible-lines">${visibleLinesHTML}</g>${damageMarkers}</g>${rulerMarks}</g>`;
             }
             const style = `<style>line{fill:none;stroke:#000;stroke-linecap:round;stroke-width:${1/scale};}.hidden-lines line{stroke:#888;stroke-width:${0.5/scale};stroke-dasharray:${2.5/scale};}.damage-marker{fill:#D00;stroke:none;}.label{font-size:16px;font-family:sans-serif;}</style>`;
             return `<svg width="${svgWidth}" height="${svgHeight}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 ${svgWidth} ${svgHeight}">${style}<rect x="0" y="0" width="${svgWidth}" height="${svgHeight}" fill="#fff"/><text x="${padding}" y="35" class="label" font-weight="bold">Assembly: ${objectName || 'Untitled'}</text>${svgElements}</svg>`;
