--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -189,14 +189,14 @@
 
         // --- MATERIALS ---
         const intactPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
-        const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xa4058f, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
+        const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const missingPartMaterial = new THREE.MeshStandardMaterial({ color: 0xffff00, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.7, side: THREE.DoubleSide });
-        const newMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
-        const discardedMaterial = new THREE.MeshStandardMaterial({ color: 0xff8000, transparent: true, opacity: 0.5, side: THREE.DoubleSide });
+        const newMaterial = new THREE.MeshStandardMaterial({ color: 0xdd3388, transparent: true, opacity: 0.3, side: THREE.DoubleSide }); // Pink for new parts
+        const discardedMaterial = new THREE.MeshStandardMaterial({ color: 0xff8000, transparent: true, opacity: 0.5, side: THREE.DoubleSide }); // Orange for discarded
         const outlineMaterial = new THREE.LineBasicMaterial({ color: 0x000000, transparent: true, opacity: 0.8});
         const defaultDotMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-        const selectedDotMaterial = new THREE.MeshBasicMaterial({ color: 0x16edaf });
+        const selectedDotMaterial = new THREE.MeshBasicMaterial({ color: 0x6f0000 });
         
         function init() {
             scene = new THREE.Scene();
