--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -295,9 +295,9 @@
                     case 'missing':
                         material = missingPartMaterial;
                         break;
-                    case 'defective':
-                        material = defectivePartMaterial;
-                        break;
+                    // case 'defective':
+                    //     material = defectivePartMaterial;
+                    //     break;
                     default:
                         material = intactPartMaterial;
                         break;
