--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -189,7 +189,7 @@
 
         // --- MATERIALS ---
         const intactPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
-        const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xf600f6, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
+        const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xf6007b, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const missingPartMaterial = new THREE.MeshStandardMaterial({ color: 0xffff00, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.7, side: THREE.DoubleSide });
         const affectedPartMaterial = new THREE.MeshStandardMaterial({ color: 0x00fff6, transparent: true, opacity: 0.3, side: THREE.DoubleSide }); // A nice bright blue for step-affected parts
